tests/fixtures/components/invalid-pure/session.blade.php
@pure

<div class="message">
    {{ session('message') }}
</div>
